Middle of changing handles

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 crossbeam-utils = "0.8.21"
+csv = "1.4.0"
 hazard = "0.3.1"
 linux-futex = "1.0.0"
 portable-atomic = "1.11.1"
